--- a/FRONT-END/package.json
+++ b/FRONT-END/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.4",
+    "axios": "^1.9.0",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
+    "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
