--- a/FRONT-END/package.json
+++ b/FRONT-END/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
@@ -24,7 +25,8 @@
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
     "sweetalert2": "^11.21.0",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.7",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
