--- a/FRONT-END/package.json
+++ b/FRONT-END/package.json
@@ -13,11 +13,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
